# batch-encryption-proof

./: README.md  profile.pb
core/: Cargo.toml
core/src/: lib.rs
host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
