[package]
name = "batch_encrypt_circuit"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2.5", default-features = false, features = ['std', 'getrandom'] }
core = { path = "../../core" }
batch-threshold = { git = "https://github.com/ocdbytes/batched-threshold-pp", branch = "main" }
ark-bls12-381 = { version = "0.5.0", default-features = false, features = [
    "curve",
] }
ark-ec = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false, features = [
    "derive",
] }